Fixed external site field note overlap. Ticket 757, Katy's notes #2 second.

--- a/wp-content/themes/citytech/style.css
+++ b/wp-content/themes/citytech/style.css
@@ -4163,6 +4163,7 @@ h4.group-activity-title.activity-members-title {
 	padding-left: 15px;
 	display: block;
 	white-space: normal;
+	margin: 0 0 0 6px;
 }
 #item-body h5.invite-title {
 	font-size: 11px;
